# triream

./: CHANGELOG.md  LICENSE  format.sh  stack.yaml  triream.cabal
.github/workflows/: haskell.yml
src/: Proto.hs
