cabal-version:      2.4
name:               triream
version:            0.1.0.0
synopsis:           3D to 2D triangle-based renderer
license:            BSD-3-Clause
license-file:       LICENSE
author:             Jonathan Merritt
maintainer:         j.s.merritt@gmail.com
copyright:          Copyright (C) 2020 triream developers
category:           Graphics
extra-source-files: CHANGELOG.md
description:
  Please see the README for the package at its homepage:
  https://github.com/lancelet/triream

source-repository head
  type:     git
  location: git://github.com/lancelet/triream.git

common base
  default-language: Haskell2010
  build-depends:    base ^>=4.13.0.0

common ghc-options
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

library
  import:          base, ghc-options
  hs-source-dirs:  src
  exposed-modules:
  build-depends:

executable triream
  import:         base, ghc-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  triream
